Fix low-level contribution buttons alignment

--- a/discordfx/styles/discord.css
+++ b/discordfx/styles/discord.css
@@ -56,6 +56,13 @@ h3
     margin-block-start: 3em;
 }
 
+h3[id]
+{
+    margin: 0;
+    padding-block-start: 1em;
+    padding-block-start: 3em;
+}
+
 h4 
 {
     opacity: 1;
@@ -502,6 +509,7 @@ legend, pre
     display: block;
     background-color: var(--code-bg-color);
     padding: 16px;
+    margin: 0;
     border-radius: 4px;
 }
 
@@ -526,11 +534,17 @@ code
 .pull-right 
 {
     float: right;
+    margin: 20px 0 0 0;
 }
 
 .mobile-hide 
 {
     visibility: hidden;
+}
+
+.divider
+{
+    margin-left: 5px;
 }
 
 @media (min-width: 1024px) 
